style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  height: 100vh;
  font-family: "Roboto", serif;
}

/* Style header section */
.header {
  background-color: #1f2937;
  padding: 1rem 0 7rem 0;
}

.header-container {
  display: flex;
  flex-direction: column;
  gap: 7rem;
  max-width: 1000px;
  margin: 0 auto;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  font-size: 24px;;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;

  display: flex;
  gap: 18px;
}

a {
  text-decoration: none;
}

/* Style hero section */
.hero {
  display: flex;
  justify-content: space-between;
  gap: 2.5rem;
}

.hero > * {
  flex: 1;
}

.hero-content {
  max-width: 400px;
}

.hero-main-text {
  font-size: 48px;
  margin: 0px;
}

.hero-secondary-text {
  font-weight: 300;
  margin: 12px 0;
}

.hero-button {
  border: none;
}

.hero-image {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: gray;
}

/* Style body */
/* Style information section */
.info {
  text-align: center;
}

.info-header {
  font-weight: 900;
  margin: 3rem 0;
}

.info-cards {
  display: flex;
  justify-content: center;
  gap: 56px;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 150px;
  gap: 8px;
}

.card-image {
  width: 150px;
  height: 150px;
  border: 4px solid #3882f6;
  border-radius: 10px;
}

.card-caption {
  color: gray;
}

/* Style quote section */
.quote {
  display: flex;
  justify-content: center;
  background-color: #e5e7eb;
  margin-top: 7rem;
}

.quote-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 7rem 0;
  max-width: 800px;
  gap: 1rem;
}

.quote-text {
  font-style: italic;
  font-weight: 300;
}

.quote-author {
  align-self: flex-end;
  font-weight: bold;
  font-size: 24px;
}

/* Style call action section */
.call-action {
  background-color: #3882f6;
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 1100px;
  margin: 7rem auto;
  padding: 3rem 7rem;
  border-radius: 10px;
}

.call-action-header {
  font-size: 24px;
  font-weight: bold;
  color: #f9faf8;
}

.call-action-secondary-text {
  color: #e5e7eb;
}

.call-action-button {
  border: 2px solid #f9faf8;
}

/* Style footer section */
footer {
  background-color: #1f2937;
  color: #e5e7eb;
  text-align: center;
  padding: 2rem;
}

/* Common */
.logo,
.hero-main-text {
  color: #f9faf8;
  font-weight: bold;
}

a,
.hero-secondary-text,
.hero-image {
  color: #e5e7eb;
  font-size: 18px;
}

.info-header,
.quote-text {
  font-size: 36px;
  color: #1f2937;
}

.hero-button,
.call-action-button {
  background-color: #3882f6;
  padding: 10px 36px;
  color: #f9faf8;
  font-weight: bold;
  border-radius: 6px;
}

